infra/k8s/expiration-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expiration
  template:
    metadata:
      labels:
        app: expiration
    spec:
      containers:
        - name: expiration
          # uncomment this if you want to run on docker desktop
          image: thasup/expiration
          # uncomment this if you want to run on google cloud platform
          # image: us.gcr.io/aurapan-shop-367317/expiration
