infra/k8s/order-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order
          # uncomment this if you want to run on docker desktop
          image: thasup/order
          # uncomment this if you want to run on google cloud platform
          # image: us.gcr.io/aurapan-shop-367317/order
---
apiVersion: v1
kind: Service
metadata:
  name: order-srv
spec:
  selector:
    app: order
  type: ClusterIP
  ports:
    - name: order
      protocol: TCP
      port: 3000
      targetPort: 3000
