infra/k8s/payment-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
        - name: payment
          # uncomment this if you want to run on docker desktop
          image: thasup/payment
          # uncomment this if you want to run on google cloud platform
          # image: us.gcr.io/aurapan-shop-367317/payment
---
apiVersion: v1
kind: Service
metadata:
  name: payment-srv
spec:
  selector:
    app: payment
  type: ClusterIP
  ports:
    - name: payment
      protocol: TCP
      port: 3000
      targetPort: 3000
