infra/k8s/product-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
        - name: product
          # uncomment this if you want to run on docker desktop
          image: ecommerce/product
          # uncomment this if you want to run on google cloud platform
          # image: us.gcr.io/ecommercewebsite.me-shop-367317/product
---
apiVersion: v1
kind: Service
metadata:
  name: product-srv
spec:
  selector:
    app: product
  type: ClusterIP
  ports:
    - name: product
      protocol: TCP
      port: 3000
      targetPort: 3000
