infra/k8s/user-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user
          # uncomment this if you want to run on docker desktop
          image: ecommerce/user
          # uncomment this if you want to run on google cloud platform
          # image: us.gcr.io/ecommercewebsite.me-shop-367317/user
---
apiVersion: v1
kind: Service
metadata:
  name: user-srv
spec:
  selector:
    app: user
  type: ClusterIP
  ports:
    - name: user
      protocol: TCP
      port: 3000
      targetPort: 3000
